[BZ #2420]

* stdlib/strfmon_l.c (__vstrfmon_l): Fix handling of ! modifier.
	* localedata/Makefile: Add rules to build and run tst-strfmon1.
	* localedata/tst-strfmon1.c: New file.